src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/GLXARBGetProcAddress_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXARBGetProcAddress_StringErrorContext.class */
public final class GLXARBGetProcAddress_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglXGetProcAddressARB(J)J", "net/labymod/core/laby3d/opengl/error/generated/GLXARBGetProcAddressErrorContext");
        methods.put("glXGetProcAddressARB(Ljava/nio/ByteBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/GLXARBGetProcAddressErrorContext");
        methods.put("glXGetProcAddressARB(Ljava/lang/CharSequence;)J", "net/labymod/core/laby3d/opengl/error/generated/GLXARBGetProcAddressErrorContext");
        return methods;
    }
}
